[workspace]
members = [
  # COMMON
  "common",
  # MOCK CEP47
  "mock-cep47",
  # MOCK ERC20
  "mock-erc20",
  # LIQUID BASE
  "liquid-base-crate",
  # LIQUID FACTORY
  "liquid-factory/liquid-factory",
  "liquid-factory/liquid-factory-crate",
  "liquid-factory/liquid-factory-tests",
  # LIQUID HELPER
  "liquid-helper/liquid-helper",
  "liquid-helper/liquid-helper-crate",
  "liquid-helper/liquid-helper-proxy",
  "liquid-helper/liquid-helper-tests",
  # LIQUID LOCKER
  "liquid-locker/liquid-locker",
  "liquid-locker/liquid-locker-crate",
  "liquid-locker/liquid-locker-proxy",
  "liquid-locker/liquid-locker-tests",
  # LIQUID TRANSFER
  "liquid-transfer-crate",
]
[profile.release]
codegen-units = 1
lto = true