[package]
name = "liquid-helper-crate"
version = "0.2.0"
authors = ["Nouman Nadeem <nouman.nadeem.zafar@scytalelabs.com>"]
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
contract-utils = { path = "../../utils/contract-utils" }
liquid-nft-utils = { path = "../../utils/liquid-nft-utils" }
liquid-base-crate = { path = "../../liquid-base-crate" }
renvm-sig = "0.1.1"
hex = { version = "0.4.3", default-features = false }