[package]
name = "liquid-locker-crate"
version = "0.2.0"
authors = ["Bassam Monib <bassam.munib@scytalelabs.com>"]
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
contract-utils = { path = "../../utils/contract-utils" }
liquid-nft-utils = { path = "../../utils/liquid-nft-utils" }
liquid-transfer-crate = { path = "../../liquid-transfer/liquid-transfer-crate" }
liquid-helper-crate = { path="../../liquid-helper/liquid-helper-crate" }
renvm-sig = "0.1.1"
hex = { version = "0.4.3", default-features = false }