[package]
name = "liquid-transfer"
version = "0.2.0"
authors = ["Bassam Monib <bassam.munib@scytalelabs.com>"]
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
contract-utils = { path = "../../utils/contract-utils" }
liquid-transfer-crate = { path = "../liquid-transfer-crate" }

[[bin]]
name = "liquid-transfer"
path = "bin/liquid_transfer.rs"
bench = false
doctest = false
test = false

[features]
default = ["casper-contract/std", "casper-types/std"]