[package]
authors = ["Bassam Munib <bassam.munib@scytalelabs.com>"]
edition = "2018"
name = "liquid_factory"
version = "0.1.0"

[dependencies]
casper-contract = "1.3.2"
casper-types = "1.3.2"
contract-utils = { path = "../../utils/contract-utils" }
liquid_transfer_crate = { path = "../../liquid_transfer_crate" }
hex = {version = "0.4.3", default-features = false}
renvm-sig = "0.1.1"

[[bin]]
bench = false
doctest = false
name = "liquid_factory"
path = "bin/liquid_factory.rs"
test = false

[features]
default = ["casper-contract/std", "casper-types/std"]
