[package]
authors = ["Nouman Nadeem <nouman.nadeem.zafar@scytalelabs.com>"]
edition = "2018"
name = "liquid_helper"
version = "0.1.0"

[dependencies]
casper-contract = "1.3.2"
casper-types = "1.3.2"
contract-utils = { path = "../../utils/contract-utils" }
liquid-nft-utils = { path = "../../utils/liquid-nft-utils" }
hex = {version = "0.4.3", default-features = false}
renvm-sig = "0.1.1"
liquid_base_crate = { path = "../../liquid_base_crate" }

[[bin]]
bench = false
doctest = false
name = "liquid_helper"
path = "bin/liquid_helper.rs"
test = false

[features]
default = ["casper-contract/std", "casper-types/std"]
