[package]
authors = ["Saad Majeed <saad.majeed@scytalelabs.com>"]
edition = "2018"
name = "liquid_locker-tests"
version = "0.2.1"

[dependencies]
blake2 = "0.9.1"
casper-contract = "1.3.2"
casper-engine-test-support = "1.3.2"
casper-types = "1.3.2"
contract-utils = {path = "../../utils/contract-utils"}
hex = "0.4.3"
renvm-sig = "0.1.1"
test-env = {path = "../../utils/test-env"}
liquid_transfer_crate = { path = "../../liquid_transfer_crate" }
liquid_helper = { path="../../liquid_helper/liquid_helper" }

[features]
default = ["casper-contract/std", "casper-types/std", "casper-contract/test-support"]
