[package]
authors = ["Saad Majeed <saad.majeed@scytalelabs.com>"]
edition = "2018"
name = "liquid_locker"
version = "0.1.0"

[dependencies]
casper-contract = "1.3.2"
casper-types = "1.3.2"
contract-utils = { path = "../../utils/contract-utils" }
liquid-nft-utils = { path = "../../utils/liquid-nft-utils" }
liquid_transfer_crate = { path = "../../liquid_transfer_crate" }
liquid_helper = { path="../../liquid_helper/liquid_helper" }

[[bin]]
bench = false
doctest = false
name = "liquid_locker"
path = "bin/liquid_locker.rs"
test = false

[features]
default = ["casper-contract/std", "casper-types/std"]
