[package]
name = "liquid-transfer-crate"
authors = ["Bassam Munib <bassam.munib@scytalelabs.com>"]
edition = "2018"
version = "0.2.0"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
casper_types_derive = "0.1.0"
casperlabs-contract-utils = "0.1.0"
common = { path = "../../common"}
cryptoxide = "0.3.3"
hex = { version = "0.4.3", default-features = false }
renvm-sig = "0.1.1"
