[package]
name = "liquid-helper"
version = "0.2.0"
authors = ["Nouman Nadeem <nouman.nadeem.zafar@scytalelabs.com>"]
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
casperlabs-contract-utils = "0.1.0"
liquid-helper-crate = { path = "../liquid-helper-crate" }

[[bin]]
name = "liquid-helper"
path = "bin/liquid_helper.rs"
bench = false
doctest = false
test = false

[features]
default = ["casper-contract/std", "casper-types/std"]