[package]
name = "liquid-locker"
version = "0.2.0"
authors = ["Bassam Monib <bassam.munib@scytalelabs.com>"]
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
casperlabs-contract-utils = "0.1.0"
liquid-locker-crate = { path = "../liquid-locker-crate" }

[[bin]]
name = "liquid-locker"
path = "bin/liquid_locker.rs"
bench = false
doctest = false
test = false

[features]
default = ["casper-contract/std", "casper-types/std"]